@@ -2,6 +2,8 @@ package com.MBAREK0.web.controller;
 
 import com.MBAREK0.web.config.PersistenceManager;
 import com.MBAREK0.web.entity.*;
+import com.MBAREK0.web.repository.UserRepository;
+import com.MBAREK0.web.repository.implementation.UserRepositoryImpl;
 import com.MBAREK0.web.service.TaskService;
 import com.MBAREK0.web.service.UserService;
 import com.MBAREK0.web.util.ResponseHandler;
@@ -19,6 +21,7 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class RequestController extends HttpServlet {
 
@@ -31,7 +34,9 @@ public class RequestController extends HttpServlet {
         entityManagerFactory = Persistence.createEntityManagerFactory("default");
         entityManager = PersistenceManager.getEntityManager();
         taskService = new TaskService(entityManager);
-        userService = new UserService(entityManager);
+        UserRepository userRepository = new UserRepositoryImpl(entityManager);
+
+        userService = new UserService(userRepository);
     }
 
 
@@ -95,7 +100,7 @@ public class RequestController extends HttpServlet {
         }
 
         List<User> users = userService.getUsersByRole(UserRole.user);
-        users = users.stream().filter(u -> u != user).toList();
+        users = users.stream().filter(u -> u != user).collect(Collectors.toList());
 
         req.setAttribute("users", users);
         req.setAttribute("task", task);
